# multimedia_midi_framework

./: CLAUDE.md  OAT.xml  README.md  README_zh.md  bundle.json
frameworks/native/midi/: BUILD.gn
frameworks/native/midi/include/: midi_client_private.h  midi_service_client.h  midi_service_interface.h
frameworks/native/midi/src/: midi_client.cpp  midi_service_client.cpp
frameworks/native/midiutils/: BUILD.gn
frameworks/native/midiutils/include/: midi_utils.h
frameworks/native/midiutils/src/: midi_utils.cpp
frameworks/native/ohmidi/: BUILD.gn  OHMidi.cpp
interfaces/: midi_info.h  midi_log.h
interfaces/inner_api/native/: midi_client.h
interfaces/kits/c/midi/: native_midi.h  native_midi_base.h
services/: BUILD.gn
services/common/: BUILD.gn
services/common/include/: ble_midi_encoder.h  midi_shared_ring.h  ump_converter.h  ump_processor.h
services/common/src/: ble_midi_encoder.cpp  futex_tool.cpp  midi_shared_ring.cpp  ump_converter.cpp  ump_processor.cpp
services/etc/: midi_server.cfg
services/idl/: BUILD.gn  IIpcMidiInServer.idl  IMidiCallback.idl  IMidiDeviceOpenCallback.idl  MidiTypes.idl
services/server/include/: midi_client_connection.h  midi_device_ble.h  midi_device_connection.h  midi_device_driver.h  midi_device_mananger.h  midi_device_usb.h  midi_in_server.h  midi_listener_callback.h  midi_permission.h  midi_server.h  midi_server_dump.h  midi_service_controller.h
services/server/src/: midi_client_connection.cpp  midi_device_ble.cpp  midi_device_connection.cpp  midi_device_mananger.cpp  midi_device_usb.cpp  midi_in_server.cpp  midi_listener_callback.cpp  midi_permission.cpp  midi_server.cpp  midi_server_dump.cpp  midi_service_controller.cpp
test/: BUILD.gn
test/demo/: midi_demo.cpp
test/fuzzer/: midi_service_controller_fuzzer.cpp
test/fuzzer/midiservicecontroller_fuzzer/: midiservicecontroller_fuzzer.cpp
test/fuzztest/midiservicecontroller_fuzzer/: BUILD.gn  midiservicecontroller_fuzzer.cpp
test/unittest/ble_midi_codec_unit_test/: BUILD.gn  ble_midi_codec_unit_test.cpp
test/unittest/ble_midi_decoder_unit_test/: BUILD.gn  ble_midi_decoder_unit_test.cpp
test/unittest/common/: BUILD.gn  midi_test_common.h
test/unittest/common/src/: midi_shared_ring_unit_test.cpp
test/unittest/midi_client_connection/: BUILD.gn
test/unittest/midi_client_connection/src/: midi_client_connection_unit_test.cpp
test/unittest/midi_client_unit_test/: BUILD.gn  midi_client_unit_test.cpp
test/unittest/midi_device_connection/: BUILD.gn  midi_device_connection_unit_test.cpp
test/unittest/midi_device_manager_unit_test/: BUILD.gn  midi_device_manager_unit_test.cpp
test/unittest/midi_device_usb_unit_test/: BUILD.gn  midi_device_usb_unit_test.cpp
test/unittest/midi_server_unit_test/: BUILD.gn  midi_server_unit_test.cpp
test/unittest/midi_service_client_unit_test/: BUILD.gn  midi_service_client_unit_test.cpp
test/unittest/midi_service_controller_unit_test/: BUILD.gn  midi_service_controller_unit_test.cpp
test/unittest/ump_converter_unit_test/: BUILD.gn  ump_converter_uint_test.cpp
test/unittest/ump_processor_unit_test/: BUILD.gn
