# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//build/ohos.gni")
import("//foundation/multimedia/midi_framework/config.gni")

ohos_fuzztest("MidiServiceControllerFuzzTest") {
  module_out_path = "midi_framework/"
  fuzz_config_file = "../midiservicecontroller_fuzzer"
  include_dirs = [
    "${midi_framework_root}/frameworks/native/midiutils/include",
    "${midi_framework_root}/interfaces/",
    "${midi_framework_root}/interfaces/kits/c/midi",
    "${midi_framework_root}/services/common/include",
    "${midi_framework_root}/services/server/include",
    "${midi_framework_root}/test/unittest/common",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-fno-access-control",
  ]

  sources = [ "midiservicecontroller_fuzzer.cpp" ]

  deps = [
    "${midi_framework_root}/services/idl:midi_framework_interface",
    "${midi_framework_root}/services:midi_service",
    "${midi_framework_root}/services/common:midi_common",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single"
  ]

  defines = [
    "UNIT_TEST_SUPPORT",
    "MIDI_TEST_DISABLE_EVENT_SUBSCRIPTION",
  ]
  if (use_libfuzzer || use_clang_coverage) {
    defines += [ "TEST_COVERAGE" ]
  }
}

group("fuzztest") {
  testonly = true
  deps = [ ":MidiServiceControllerFuzzTest" ]
}
